--- a/bin/telas/Interface.fxml
+++ b/bin/telas/Interface.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,16 +13,14 @@
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
-            <AnchorPane prefHeight="95.0" prefWidth="600.0">
+            <AnchorPane prefHeight="95.0" prefWidth="600.0" style="-fx-background-color: #3C6A80;">
                <children>
-                  <TextField fx:id="descriptionText" layoutX="10.0" layoutY="31.0" prefHeight="25.0" prefWidth="480.0" />
-                  <Button fx:id="addButton" layoutX="504.0" layoutY="31.0" mnemonicParsing="false" text="Anotar" />
+                  <TextField fx:id="descriptionText" layoutX="10.0" layoutY="31.0" prefHeight="25.0" prefWidth="583.0" />
+                  <Button fx:id="addButton" layoutX="276.0" layoutY="69.0" mnemonicParsing="false" text="Anotar" />
                   <Label fx:id="text" layoutX="250.0" layoutY="6.0" text="Suas tarefas do dia" />
-                  <DatePicker layoutX="232.0" layoutY="64.0" />
-                  <Label layoutX="176.0" layoutY="68.0" text="Deadline" />
                </children>
             </AnchorPane>
-            <GridPane layoutX="-1.0" layoutY="93.0" prefHeight="306.0" prefWidth="600.0">
+            <GridPane layoutX="-1.0" layoutY="93.0" prefHeight="306.0" prefWidth="600.0" style="-fx-background-color: #3C6A80;">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="445.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="107.0" />
