--- a/bin/telas/register.fxml
+++ b/bin/telas/register.fxml
@@ -14,9 +14,9 @@
    <children>
     <AnchorPane layoutX="-1.0" layoutY="-9.0" maxHeight="-1.0" maxWidth="-1.0" prefHeight="417.0" prefWidth="600.0" style="-fx-background-color: #39525e;">
       <children>
-            <ImageView fitHeight="65.0" fitWidth="68.0" layoutX="7.0" layoutY="14.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="65.0" fitWidth="68.0" layoutX="7.0" layoutY="14.0" onAction="#back" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../images/119999_arrows_512x512.png" />
+                  <Image url="@../../images/119999_arrows_512x512.png" />
                </image>
             </ImageView>
             <Label layoutX="254.0" layoutY="42.0" prefHeight="17.0" prefWidth="134.0" text="Infinity" textFill="WHITE">
