--- a/src/telas/telasFXML/Interface.fxml
+++ b/src/telas/telasFXML/Interface.fxml
@@ -7,9 +7,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #39525e;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InterfaceController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
+ prefWidth="800.0" style="-fx-background-color: #39525e;" xmlns="http://javafx.com/javafx/10.
+ 0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.interfaceController">
     <children>
-        <Button fx:id="editartarefa" layoutX="431.0" layoutY="417.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: #39525e;" text="Editar" textFill="WHITE">
+        <Button fx:id="editartarefa" layoutX="431.0" layoutY="417.0" mnemonicParsing="false" onAction="#editarTarefa" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: #39525e;" text="Editar" textFill="WHITE">
             <font>
                 <Font size="20.0" />
             </font></Button>
@@ -28,7 +30,7 @@
             <TableColumn fx:id="nometarefa" prefWidth="134.99996948242188" text="Nome Tarefa" />
             <TableColumn fx:id="conteudotarefa" minWidth="0.0" prefWidth="541.0" text="Conteudo Tarefa" />
          </columns></TableView>
-      <Button fx:id="incluirtarefa" layoutX="276.0" layoutY="417.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: #39525e;" text="Incluir" textFill="WHITE">
+      <Button fx:id="incluirtarefa" layoutX="276.0" layoutY="417.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: #39525e;" text="Incluir" onAction="#includeTask" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
