--- a/src/telas/telasFXML/register.fxml
+++ b/src/telas/telasFXML/register.fxml
@@ -14,6 +14,11 @@
    <children>
     <AnchorPane layoutX="-1.0" layoutY="-9.0" maxHeight="-1.0" maxWidth="-1.0" prefHeight="417.0" prefWidth="600.0" style="-fx-background-color: #39525e;">
       <children>
+            <ImageView fitHeight="65.0" fitWidth="68.0" layoutX="7.0" layoutY="14.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/119999_arrows_512x512.png" />
+               </image>
+            </ImageView>
             <Label layoutX="254.0" layoutY="42.0" prefHeight="17.0" prefWidth="134.0" text="Infinity" textFill="WHITE">
                <font>
                   <Font size="36.0" />
@@ -23,11 +28,6 @@
             <TextField fx:id="regNick" layoutX="177.0" layoutY="129.0" prefHeight="33.0" prefWidth="288.0" promptText="Username" />
             <PasswordField fx:id="regPass" layoutX="177.0" layoutY="181.0" prefHeight="33.0" prefWidth="288.0" promptText="Password" />
             <PasswordField fx:id="regConfirmPass" layoutX="177.0" layoutY="237.0" prefHeight="33.0" prefWidth="288.0" promptText="Confirm password" />
-            <ImageView fitHeight="65.0" fitWidth="68.0" layoutX="7.0" onMouseClicked='#back' layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/119999_arrows_512x512.png" />
-               </image>
-            </ImageView>
       </children>
     </AnchorPane>
    </children>
